# ETE-Real-time-data-streaming

./: .gitignore  README.md  pyproject.toml  spark-stream.py
dags/: kafka-stream.py
